add document receivement
