# PocketCenter/PocketActionService/internal/docs/swagger.json
@@ -4,6 +4,48 @@
         "contact": {}
     },
     "paths": {
+        "/document": {
+            "get": {
+                "description": "Get global PocketAction document",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "action"
+                ],
+                "summary": "Get global PocketAction document",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authentication",
+                        "name": "Authentication",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "SessionId",
+                        "name": "SessionId",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "PocketAction document",
+                        "schema": {
+                            "$ref": "#/definitions/model.PocketActionDocument"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
         "/pocketaction": {
             "post": {
                 "description": "Trigger Action, send to Composer use websocket",
@@ -14,7 +56,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "session"
+                    "action"
                 ],
                 "summary": "Trigger PocketAction",
                 "parameters": [
@@ -54,6 +96,20 @@
         }
     },
     "definitions": {
+        "model.Action": {
+            "type": "object",
+            "properties": {
+                "displayName": {
+                    "type": "string"
+                },
+                "payload": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
         "model.PocketAction": {
             "type": "object",
             "properties": {
@@ -62,6 +118,17 @@
                 },
                 "type": {
                     "type": "string"
+                }
+            }
+        },
+        "model.PocketActionDocument": {
+            "type": "object",
+            "properties": {
+                "actions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Action"
+                    }
                 }
             }
         }
