# PocketCenter/PocketActionService/internal/model/pocket_action_document.go
@@ -1,0 +1,11 @@
+package model
+
+type PocketActionDocument struct {
+	Actions []Action `json:"actions"`
+}
+
+type Action struct {
+	DisplayName string `json:"displayName"`
+	Type        string `json:"type"`
+	Payload     string `json:"payload"`
+}
